meta-swi-mdm9x40/recipes-core/init-ifupdown/files/rules.v4
# Generated by iptables-save v1.4.21
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]

# Exceptions from default INPUT policy DROP:
# Allow all traffic from loopback interface
-A INPUT -i lo -j ACCEPT

# Allow traffic on already established connections
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT

# Allow DNS replies
-A INPUT -p udp -m udp --sport 53 -j ACCEPT

# Allow PING replies and requests
-A INPUT -p icmp -m icmp --icmp-type 0 -j ACCEPT
-A INPUT -p icmp -m icmp --icmp-type 8 -j ACCEPT

# Allow incoming SSH connections over Eth0 interface
-A INPUT -i eth0 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -i ecm0 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -i bridge0 -p tcp -m tcp --dport 22 -j ACCEPT

# Allow DHCP request on Bridge0
-A INPUT -i bridge0 -p udp --dport 67 -j ACCEPT
-A INPUT -i bridge0 -p udp --sport 68 -j ACCEPT

# UDP domain Domain Name Server
-A INPUT -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 53 -j ACCEPT

# Allow PING replies and requests for FORWARD
-A FORWARD -p icmp -m icmp --icmp-type 0 -j ACCEPT
-A FORWARD -p icmp -m icmp --icmp-type 8 -j ACCEPT

# Allow https http protocol over TLS/SSL
-A FORWARD -p tcp --dport 443 -j ACCEPT
-A FORWARD -p tcp --sport 443 -j ACCEPT
-A FORWARD -p tcp --dport 80 -j ACCEPT
-A FORWARD -p tcp --sport 80 -j ACCEPT

# Create more custom rules here, e.g.:
# Allow incoming TCP connections for service port <port> on interface <if>
# -A INPUT -i <if> -p tcp -m tcp --dport <port> -j ACCEPT


COMMIT
